Fixed FontAwesome Icons not showing up on home page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,6 +6,14 @@ html{
     font-family: 'Rubik', sans-serif !important;
 }
 
+.far, .fas{
+    font-family: "Font Awesome 5 Free" !important;
+}
+
+.fab {
+    font-family: "Font Awesome 5 Brands" !important;
+}
+
 .home__spacer {
     display: inline;
     position: relative;
